Add widgets endpoints

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ server.port=${PORT:8080}
 server.servlet.context-path=/
 server.error.whitelabel.enabled=false
 management.endpoints.web.base-path=/manage
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
+spring.jpa.hibernate.ddl-auto:create
