--- a/dev-shared/docker-compose.yml
+++ b/dev-shared/docker-compose.yml
@@ -9,3 +9,24 @@ services:
       POSTGRES_DB: tender
     ports:
       - 5432:5432
+
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.5.0
+    container_name: superapp-elasticsearch
+    environment:
+      - xpack.security.enabled=false
+      - discovery.type=single-node
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+      nofile:
+        soft: 65536
+        hard: 65536
+    cap_add:
+      - IPC_LOCK
+    ports:
+      - 9200:9200
+      - 9300:9300
+    volumes:
+      - './files:/usr/share/elasticsearch/config/files:z'
