--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=prod
+spring.profiles.active=local
 server.address=0.0.0.0
 server.port=${PORT:8080}
 server.servlet.context-path=/
