--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,3 +1,8 @@
 elasticsearch.host: localhost
 elasticsearch.port: 9300
 elasticsearch.clustername: docker-cluster
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/tender
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=tender
+spring.datasource.password=tender
