--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,4 @@ server.error.whitelabel.enabled=false
 management.endpoints.web.base-path=/manage
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
-spring.jpa.hibernate.ddl-auto:create
+spring.jpa.hibernate.ddl-auto=update
