--- a/build.gradle
+++ b/build.gradle
@@ -8,8 +8,8 @@ apply plugin: "org.springframework.boot"
 apply plugin: "io.spring.dependency-management"
 apply from: "libraries.gradle"
 
-sourceCompatibility = 1.11
-targetCompatibility = 1.11
+sourceCompatibility = '11'
+targetCompatibility = '11'
 
 [compileJava, compileTestJava, javadoc]*.options*.encoding = 'UTF-8'
 
@@ -42,6 +42,13 @@ dependencies {
 
     compile "org.springframework.data:spring-data-elasticsearch"
 
+    testImplementation('org.springframework.boot:spring-boot-starter-test') {
+        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+    }
+}
+
+test {
+    useJUnitPlatform()
 }
 
 idea {
