--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ management.endpoints.web.base-path=/manage
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
 spring.jpa.hibernate.ddl-auto=update
+
+spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
